# jegadeesh_titman_93_rep

./: .gitignore  README.md  jt_new5.py  main.py  mypy.ini  pyproject.toml
.claude/agents/: finance-professor-kelly.md  pragmatic-python-data-scientist.md
notes/: 2025-09-17-robo-bryan-notes.md
